--- a/index.css
+++ b/index.css
@@ -7,31 +7,28 @@ body{
 body {
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 16px;
-    color:#000;
+    color: #333;
     margin: 0;
     padding: 0;
 	/*transform: rotate(90deg);*/
 }
 *{
 	box-sizing: border-box!important;
-	transform: translateZ(1px);
+	/*transform: translate3d(0,0,0);*/
 }
 
 *:before, *:after{
 	z-index: 5;
 }
 
-.iconfont {
-	font-family:"iconfont" !important;
-	font-size:16px;
-	font-style:normal;
-	-webkit-font-smoothing: antialiased;
-	-webkit-text-stroke-width: 0.2px;
-	-moz-osx-font-smoothing: grayscale;
-}		
 
 .swiper-container {
 	/*background-image: linear-gradieswiper-containernt(to top, #00c6fb 0%, #005bea 100%);*/
+	opacity: 0;
+	transition: all 0.3s;
+}
+.swiper-wrapper{
+	z-index: -1!important;
 }
 .swiper-slide {
     text-align: center;
@@ -54,6 +51,7 @@ body {
 	left: 0;*/
 	/*background-color: transparent;*/
 	/*第二步*/
+	/*overflow: hidden;*/
 }
 /* video */
 #video_div{
