--- a/view/css/keyframes.css
+++ b/view/css/keyframes.css
@@ -1,61 +1,77 @@
 .t-enter{
-	-webkit-animation: fadeInDown 1s .2s ease both;
-	animation-play-state: paused;
+	-webkit-animation: fadeInDown 1s 0.2s ease both;
+	-webkit-animation-play-state: paused;
 }
 
 .l-enter{
 	-webkit-animation: fadeInLeft 1s 1.2s ease both;
-	animation-play-state: paused;
+	-webkit-animation-play-state: paused;
 }
 
 .r-enter{
 	-webkit-animation: fadeInRight 1s 2.2s ease both;
-	animation-play-state: paused;
+	-webkit-animation-play-state: paused;
 }
 .b-enter{
 	-webkit-animation: fadeInTop 1.3s 3s ease-out both;
-	animation-play-state: paused;
+	-webkit-animation-play-state: paused;
 }
 .opacity-enter{
 	-webkit-animation: fadeIn 1s 3s ease-in both;
-	animation-play-state: paused;
+	-webkit-animation-play-state: paused;
 }
 .d-enter{
 	-webkit-animation: d-fade 1s 3.3s ease-in both;
-	animation-play-state: paused;
+	-webkit-animation-play-state: paused;
 }
-@keyframes draftLine{
-	from { height: 0% }
-	to {height: 120% }
+@-webkit-keyframes draftLine{
+	0% { height: 0%; transform: translateZ(1px); }
+	100% { height: 120%; transform: translateZ(1px); }
 }
-@keyframes draftLineCopy{
-	from { width: 0% }
-	to {width: 120% }
+@-webkit-keyframes draftLineCopy{
+	from { width: 0%; transform: translateZ(1px); }
+	to {width: 120%; transform: translateZ(1px); }
 }
-@keyframes draftLine-tl-tr{
+@-webkit-keyframes draftLine-tl-tr{
 	from {opacity: 0; width: 0%;}
 	to {opacity: 1; width: 16%;} 
 	/*有问题*/
 }
 @-webkit-keyframes fadeOutUp{
 	0%{opacity:1; -webkit-transform:translateY(0)}
-	100%{opacity:0; -webkit-transform:translateY(20px)}
+	100%{opacity:0; -webkit-transform:translateY(-20px)}
+}
+@-webkit-keyframes fadeOutDown{
+	0%{opacity:1; -webkit-transform: translateY(0)}
+	100%{opacity:0; -webkit-transform: translateY(20px)}
 }
 @-webkit-keyframes fadeInDown{
-	0%{opacity:0; -webkit-transform:translateY(-40px)}
-	100%{opacity:1; -webkit-transform:translateY(0)}
+	0%{opacity:0; transform: translateY(-40px)}
+	100%{opacity:1; transform: translateY(0)}
 }
 @-webkit-keyframes fadeInDownRight{
 	0%{opacity:0; -webkit-transform:translateY(-40px) translateX(-40px)}
 	100%{opacity:1; -webkit-transform:translateY(0)}
 }
 @-webkit-keyframes fadeInLeft{
-	0%{opacity:0; -webkit-transform:translateX(-40px)}
-	100%{opacity:1; -webkit-transform:translateX(0)}
+	0%{opacity:0; transform:translateX(-40px)}
+	100%{opacity:1; transform:translateX(0)}
 }
 @-webkit-keyframes fadeInRight{
-	0%{opacity:0; -webkit-transform:translateX(40px)}
-	100%{opacity:1; -webkit-transform:translateX(0)}
+0%{opacity:0;
+-webkit-transform:translateX(40px)}
+100%{opacity:1;
+-webkit-transform:translateX(0)}
+}
+@-moz-keyframes fadeInRight{
+0%{opacity:0;
+-moz-transform:translateX(40px)}
+100%{opacity:1;
+-moz-transform:translateX(0)}
+}
+@-webkit-keyframes fadeInRight{
+	0%{opacity:0; -wekit-transform: translateX(40px);transform: translateX(40px)}
+	100%{opacity:1; -wekit-transform: translateX(0);transform: translateX(0)}
 }
 @-webkit-keyframes fadeInTop{
 	0%{opacity:0; -webkit-transform:translateY(40px)}
@@ -82,18 +98,30 @@
 	0%{opacity:0; -webkit-transform:translateY(200px)}
 	100%{opacity:1; -webkit-transform:translateY(0)}
 }
-@keyframes floating{
-	0%{transform: translateY(0px);}
-	25%{transform: translateY(-10px);}
-	75%{transform: translateY(10px);}
-	100%{transform: translateY(0px);}
+@-webkit-keyframes floating{
+	0%{transform: translateY(0px); opacity: 1;}
+	25%{transform: translateY(-10px); opacity: 1;}
+	75%{transform: translateY(10px); opacity: 1;}
+	100%{transform: translateY(0px); opacity: 1;}
 }
-@keyframes letterSpaceing{
+@-webkit-keyframes letterSpaceing{
 	from{letter-spacing: 30px; opacity: 0;}
 	to{letter-spacing: 5px; opacity: 1;}
 }
-@keyframes wifiMove{
+@-webkit-keyframes wifiMove{
 	0%{width: 40%; top: 26%; left: 18%; opacity: 0;}
 	30%{opacity: 1;}
 	100%{ width: 72%; top: 6%; left: 2%; opacity: 1;}
+}
+@-webkit-keyframes sfzMove{
+	0%{ top: 18%; left: 26%; width: 18%; height: 24%; background-color: #0088C9; z-index: 10; }
+	100%{ top: 10%; left: 20%; width: 30%; height: 40%; background-color: #ACBDC6; z-index: 2; }
+}
+@-webkit-keyframes around{
+	0%{ transform: rotateZ(0deg); }
+	100%{ transform: rotateZ(360deg); }
+}
+@-webkit-keyframes reAround{
+	0%{ transform: rotateZ(0deg); }
+	100%{ transform: rotateZ(-360deg); }
 }
